# Zollstock

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  LIZENZ  README.md  ÄNDERUNGSLOG.md
examples/: CMakeLists.txt  pcalc.cpp
include/: zollstock.hpp
module/: CMakeLists.txt  zollstock.dimensions.ixx  zollstock.ixx  zollstock.numbers.ixx  zollstock.prefixes.ixx  (+32 more)
tests/: CMakeLists.txt  angle_unit_constant_tests.cpp  angle_unit_literal_tests.cpp  angle_unit_type_tests.cpp  area_unit_constant_tests.cpp  area_unit_literal_tests.cpp  config.hpp.in  length_unit_constant_tests.cpp  length_unit_literal_tests.cpp  length_unit_tests.cpp  length_unit_type_tests.cpp  si_prefix_tests.cpp  time_unit_constant_tests.cpp  time_unit_literal_tests.cpp  time_unit_type_tests.cpp  velocity_unit_type_tests.cpp  volume_unit_constant_tests.cpp  volume_unit_literal_tests.cpp  volume_unit_type_tests.cpp
tests/include/zollstock/tests/: constant_test_helpers.hpp  features.hpp  header_dependencies.hpp  header_info.hpp  literal_test_helpers.hpp  preprocessor_utils.hpp  required_features.hpp  required_header_dependencies.hpp  stream_utils.hpp  string_utils.hpp  test_helpers.hpp  type_test_helpers.hpp
tests/sources/: CMakeLists.txt  acceleration_unit_constant_tests.cpp  all_header_tests.cpp  angle_unit_constant_tests.cpp  angle_unit_literal_tests.cpp  angle_unit_type_tests.cpp  angle_units_header_tests.cpp  angular_velocity_unit_constant_tests.cpp  area_unit_constant_tests.cpp  area_unit_literal_tests.cpp  area_unit_type_tests.cpp  area_units_header_tests.cpp  base_units_header_tests.cpp  dimensionless_unit_constant_tests.cpp  dimensionless_unit_literal_tests.cpp  dimensionless_unit_type_tests.cpp  dimensions.cpp  header_self_containment_test.cpp.in  header_structure_tests.cpp  length_unit_constant_tests.cpp  length_unit_literal_tests.cpp  length_unit_type_tests.cpp  length_units_header_tests.cpp  manual_testing.cpp  mass_unit_constant_tests.cpp  mass_unit_literal_tests.cpp  mass_unit_type_tests.cpp  mass_units_header_tests.cpp  math_tests.cpp  planar_angle_unit_constant_tests.cpp  prefix_tests.cpp  quantity_construction_tests.cpp  quantity_limits_tests.cpp  quantity_math_tests.cpp  quantity_tests.cpp  scalar_construction_tests.cpp  scalar_tests.cpp  si_prefix_tests.cpp  squared_time_unit_constant_tests.cpp  structure_tests.cpp  (+14 more)
tests/sources/header_tests/: CMakeLists.txt  all_units_header_test.cpp  amount_of_substance_concept_header_test.cpp  amount_of_substance_unit_constants_header_test.cpp  amount_of_substance_units_header_test.cpp  amount_of_substance_units_header_tests.cpp  angle_unit_constants_header_test.cpp  angle_unit_literals_header_test.cpp  angle_units_header_test.cpp  area_concept_header_test.cpp  area_unit_constants_header_test.cpp  area_unit_literals_header_test.cpp  area_units_header_test.cpp  base_units_header_test.cpp  derived_units_header_test.cpp  header_check.cpp  header_structure_tests.cpp  length_concept_header_test.cpp  length_unit_constants_header_test.cpp  length_unit_literals_header_test.cpp  length_units_header_test.cpp  mass_concept_header_test.cpp  mass_unit_constants_header_test.cpp  mass_unit_literals_header_test.cpp  mass_units_header_test.cpp  planar_angle_concept_header_test.cpp  planar_angle_unit_constants_header_test.cpp  planar_angle_units_header_test.cpp  quantity_concepts_header_test.cpp  squared_time_unit_constants_header_test.cpp  temperature_concept_header_test.cpp  temperature_unit_constants_header_test.cpp  temperature_unit_literals_header_test.cpp  temperature_units_header_test.cpp  time_concept_header_test.cpp  time_unit_constants_header_test.cpp  time_unit_literals_header_test.cpp  time_units_header_test.cpp  unit_one_constant_header_test.cpp  unit_one_header_test.cpp  (+6 more)
tests/sources/header_tests/quantities/: concepts.cpp  constants.cpp  limits.cpp  math.cpp
tests/sources/header_tests/quantities/concepts/: amount_of_substance.cpp  area.cpp  length.cpp  mass.cpp  planar_angle.cpp  temperature.cpp  time.cpp  volume.cpp
tests/sources/header_tests/units/: amount_of_substance.cpp  area.cpp  base.cpp  derived.cpp  length.cpp  mass.cpp  one.cpp  planar_angle.cpp  temperature.cpp  time.cpp  volume.cpp
tests/sources/header_tests/units/concepts/: prefix.cpp  unit.cpp
tests/sources/header_tests/units/constants/: amount_of_substance.cpp  area.cpp  base.cpp  derived.cpp  length.cpp  mass.cpp  one.cpp  planar_angle.cpp  squared_time.cpp  temperature.cpp  time.cpp  volume.cpp
tests/sources/header_tests/units/literals/: amount_of_substance.cpp  area.cpp  base.cpp  derived.cpp  length.cpp  mass.cpp  one.cpp  planar_angle.cpp  temperature.cpp  time.cpp  volume.cpp
tests/sources/quantities/: construction.cpp  limits.cpp  math.cpp  quantity.cpp
tests/sources/unit_tests/constants/: base_constant_tests.cpp.in  electric_current.cpp  luminous_intensity.cpp  mass.cpp  one.cpp  planar_angle.cpp  temperature.cpp  time.cpp
tests/sources/unit_tests/literals/: base_literal_tests.cpp.in  electric_current.cpp  length.cpp  luminous_intensity.cpp  time.cpp
tests/sources/units/concepts/: unit.cpp
tests/sources/units/constants/: acceleration.cpp
tests/sources/units/literals/: area.cpp  base_literal_tests.cpp.in  one.cpp  planar_angle.cpp  volume.cpp
(+207 files in other folders)
