target_sources(tests PRIVATE prefix_tests.cpp)
target_sources(tests PRIVATE length_unit_constant_tests.cpp)
target_sources(tests PRIVATE length_unit_literal_tests.cpp)
target_sources(tests PRIVATE time_unit_constant_tests.cpp)
target_sources(tests PRIVATE time_unit_literal_tests.cpp)
target_sources(tests PRIVATE mass_unit_constant_tests.cpp)
target_sources(tests PRIVATE mass_unit_literal_tests.cpp)
target_sources(tests PRIVATE area_unit_constant_tests.cpp)
target_sources(tests PRIVATE area_unit_literal_tests.cpp)
target_sources(tests PRIVATE volume_unit_constant_tests.cpp)
target_sources(tests PRIVATE volume_unit_literal_tests.cpp)
target_sources(tests PRIVATE planar_angle_unit_constant_tests.cpp)
target_sources(tests PRIVATE angle_unit_literal_tests.cpp)
target_sources(tests PRIVATE temperature_unit_constant_tests.cpp)
target_sources(tests PRIVATE temperature_unit_literal_tests.cpp)
target_sources(tests PRIVATE dimensionless_unit_constant_tests.cpp)
target_sources(tests PRIVATE dimensionless_unit_literal_tests.cpp)
target_sources(tests PRIVATE squared_time_unit_constant_tests.cpp)
target_sources(tests PRIVATE velocity_unit_constant_tests.cpp)
target_sources(tests PRIVATE acceleration_unit_constant_tests.cpp)
target_sources(tests PRIVATE angular_velocity_unit_constant_tests.cpp)
target_sources(tests PRIVATE quantity_construction_tests.cpp)
target_sources(tests PRIVATE quantity_tests.cpp)
target_sources(tests PRIVATE quantity_math_tests.cpp)
target_sources(tests PRIVATE quantity_limits_tests.cpp)

add_subdirectory(header_tests)

if (MSVC)
    target_link_options   (tests PRIVATE "/stack:10000000")
    target_compile_options(tests PRIVATE "/bigobj"        )
endif(MSVC)
